@@ -1,4 +1,4 @@
-# $Id: macros.in,v 1.57 2000/05/02 08:30:31 jbj Exp $
+# $Id: macros.in,v 1.58 2000/05/30 16:52:31 jbj Exp $
 #==============================================================================
 # Macro naming conventions (preliminary):
 #
@@ -483,31 +483,50 @@ cd %{u2p:%{_builddir}}\
 # gotcha is that arguments, if present, should be on the same line as the
 # %configure.
 #
-%configure	\
-  %{?__libtoolize:[ -f configure.in ] && %{__libtoolize} --copy --force} \
-  CFLAGS="%{optflags}" ./configure %{_target_platform} --prefix=%{_prefix}
-
-#------------------------------------------------------------------------------
-# This is an improved version of %configure that may replace the above
-# macro at some point (from PLD team).
+# This is the version of %configure used throuugh rpm-3.0.4.
+#%configure	\
+#  %{?__libtoolize:[ -f configure.in ] && %{__libtoolize} --copy --force} \
+#  CFLAGS="%{optflags}" ./configure %{_target_platform} --prefix=%{_prefix}
 #
-#%configure { CFLAGS="${CFLAGS:-%optflags}" ; export CFLAGS ; \
-# CXXFLAGS="${CXXFLAGS:-%optflags}" ; export CXXFLAGS ; \
-# FFLAGS="${FFLAGS:-%optflags}" ; export FFLAGS ; \
-# ./configure %{_target_platform} \
-# 	--prefix=%{_prefix} \
-#	--exec-prefix=%{_exec_prefix} \
-#	--bindir=%{_bindir} \
-#	--sbindir=%{_sbindir} \
-#	--sysconfdir=%{_sysconfdir} \
-#	--datadir=%{_datadir} \
-#	--includedir=%{_includedir} \
-#	--libdir=%{_libdir} \
-#	--libexecdir=%{_libexecdir} \
-#	--localstatedir=%{_localstatedir} \
-#	--sharedstatedir=%{_sharedstatedir} \
-#	--mandir=%{_mandir} \
-#	--infodir=%{_infodir} }
+#------------------------------------------------------------------------------
+# This is an improved version of %configure (from PLD team).
+%configure \
+CFLAGS="${CFLAGS:-%optflags}" ; export CFLAGS ; \
+CXXFLAGS="${CXXFLAGS:-%optflags}" ; export CXXFLAGS ; \
+FFLAGS="${FFLAGS:-%optflags}" ; export FFLAGS ; \
+%{?__libtoolize:[ -f configure.in ] && %{__libtoolize} --copy --force} ; \
+./configure %{_target_platform} \
+ 	--prefix=%{_prefix} \
+	--exec-prefix=%{_exec_prefix} \
+	--bindir=%{_bindir} \
+	--sbindir=%{_sbindir} \
+	--sysconfdir=%{_sysconfdir} \
+	--datadir=%{_datadir} \
+	--includedir=%{_includedir} \
+	--libdir=%{_libdir} \
+	--libexecdir=%{_libexecdir} \
+	--localstatedir=%{_localstatedir} \
+	--sharedstatedir=%{_sharedstatedir} \
+	--mandir=%{_mandir} \
+	--infodir=%{_infodir}
+#------------------------------------------------------------------------------
+# The make install analogue of %configure:
+%makeinstall { \
+   make install \
+	prefix=%{?buildroot:%{buildroot}}%{_prefix} \
+	exec_prefix=%{?buildroot:%{buildroot}}%{_exec_prefix} \
+	bindir=%{?buildroot:%{buildroot}}%{_bindir} \
+	sbindir=%{?buildroot:%{buildroot}}%{_sbindir} \
+	sysconfdir=%{?buildroot:%{buildroot}}%{_sysconfdir} \
+	datadir=%{?buildroot:%{buildroot}}%{_datadir} \
+	includedir=%{?buildroot:%{buildroot}}%{_includedir} \
+	libdir=%{?buildroot:%{buildroot}}%{_libdir} \
+	libexecdir=%{?buildroot:%{buildroot}}%{_libexecdir} \
+	localstatedir=%{?buildroot:%{buildroot}}%{_localstatedir} \
+	sharedstatedir=%{?buildroot:%{buildroot}}%{_sharedstatedir} \
+	mandir=%{?buildroot:%{buildroot}}%{_mandir} \
+	infodir=%{?buildroot:%{buildroot}}%{_infodir} \
+   }
 
 #------------------------------------------------------------------------------
 # The GNUconfigure macro does the following:
@@ -609,4 +628,3 @@ done \
 # %files -f %{name}.lang
 #
 %find_lang	@RPMCONFIGDIR@/find-lang.sh %{buildroot}
-
